--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@capacitor/preferences": "^4.0.2",
 		"@ionic/core": "^6.7.0",
 		"pixi.js": "^7.2.2"
 	}
